Network_Devices/Other/template_docsis_cable_modem/5.0/README.md
# Docsis Cable Modem - 16Mbps

## Macros used

There are no macros links in this template.

## Template links

There are no template links in this template.

## Discovery rules

There are no discovery rules in this template.

## Items collected

|Name|Description|Type|Key and additional info|
|----|-----------|----|----|
|Downstream Power|<p>-</p>|`SNMP agent`|.1.3.6.1.2.1.10.127.1.1.1.1.6.3<p>Update: 300</p>|
|Upstream Power|<p>-</p>|`SNMP agent`|.1.3.6.1.2.1.10.127.1.2.2.1.3.2<p>Update: 300</p>|
|CM-SNR1|<p>-</p>|`SNMP agent`|.1.3.6.1.2.1.10.127.1.1.4.1.5.3<p>Update: 300</p>|
|Limite Down Negativo|<p>-</p>|`Calculated`|limite-down-neg<p>Update: 300</p>|
|Upload Traffic|<p>-</p>|`SNMP agent`|.1.3.6.1.2.1.2.2.1.16.4<p>Update: 300</p>|
|CM-SNR4|<p>-</p>|`SNMP agent`|.1.3.6.1.2.1.10.127.1.1.4.1.5.50<p>Update: 300</p>|
|Limit UP|<p>-</p>|`Calculated`|limite<p>Update: 300</p>|
|CM-SNR5|<p>-</p>|`SNMP agent`|.1.3.6.1.2.1.10.127.1.1.4.1.5.51<p>Update: 300</p>|
|Downstream Power4|<p>-</p>|`SNMP agent`|.1.3.6.1.2.1.10.127.1.1.1.1.6.50<p>Update: 300</p>|
|Downstream Power2|<p>-</p>|`SNMP agent`|.1.3.6.1.2.1.10.127.1.1.1.1.6.48<p>Update: 300</p>|
|Downstream Power5|<p>-</p>|`SNMP agent`|.1.3.6.1.2.1.10.127.1.1.1.1.6.51<p>Update: 300</p>|
|Uptime|<p>-</p>|`SNMP agent`|system.uptime<p>Update: 300</p>|
|Downstream Power3|<p>-</p>|`SNMP agent`|.1.3.6.1.2.1.10.127.1.1.1.1.6.49<p>Update: 300</p>|
|CM-SNR2|<p>-</p>|`SNMP agent`|.1.3.6.1.2.1.10.127.1.1.4.1.5.48<p>Update: 300</p>|
|Limite Down Positivo|<p>-</p>|`Calculated`|limite-down-pos<p>Update: 300</p>|
|Limit-SNR|<p>-</p>|`Calculated`|limit<p>Update: 300</p>|
|CM-SNR3|<p>-</p>|`SNMP agent`|.1.3.6.1.2.1.10.127.1.1.4.1.5.49<p>Update: 300</p>|
|Download Traffic|<p>-</p>|`SNMP agent`|.1.3.6.1.2.1.2.2.1.16.1<p>Update: 300</p>|


## Triggers

There are no triggers in this template.

